Moving schema annotations into juneau-common